--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,7 @@ These notes are intended only as support for the study of the subject and as sli
 
 \noindent \textbf{What you will find here}: Introduction to ML, Linear Model and K-NN, Neural Networks, Validation, Statistical Learning Theory (STL).\\
 
-\noindent \textbf{What's missing}: Concept Learning, SVM, Bias Variance, Deep Learning (CNN, Depp, Rand), SOM, Bayes Learning, RNN, SDL.\\
+\noindent \textbf{What's missing}: Concept Learning, SVM, Bias Variance, Deep Learning (CNN, Deep, Rand), SOM, Bayes Learning, RNN, SDL.\\
 
 \par\endgroup
 %\vspace{\fill}
